fixed overflow problem

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,10 +1,14 @@
 //Index
 body {
   overflow-x: hidden;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 main {
   overflow-x: hidden;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 nav {
