--- a/styles/style.css
+++ b/styles/style.css
@@ -142,10 +142,14 @@ li {
 
 body {
   overflow-x: hidden;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 main {
   overflow-x: hidden;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 nav {
